--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Manish Kumar Ravi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
+    "express-ejs-layouts": "^2.5.1",
+    "nodemon": "^3.1.7"
   }
 }
