start : node index.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "employee review system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Manish Kumar Ravi",
   "license": "ISC",
